# image_processing

./: readme.md
c_code/: readme.md
c_code/image_read_save/: CMakeLists.txt  shell.sh
c_code/image_read_save/src/: main.c
cuda/: readme.md
python/: reademe.md
python/bilateral_filtering/: bilateral_filtering.py
python/gauss_filtering/: gauss_filtering.py
python/mean_filtering/: mean_filtering.py
python/median_filtering/: median_filtering.py
